Fix horizontal scroll issue because gutter on image bootstrap Row.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,7 @@
 /* BOOTSTRAP ICONS FOR CONTACT */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
+
 .myTitle{
   font-family: 'Shadows Into Light Two', cursive;
   font-size: 9VW;
@@ -148,4 +149,7 @@ a:hover{
   .myWidthSmall{
     max-width: 500px;
   }
+}
+body{
+  padding: 0;
 }
